<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ingrify</string>
    <string name="app_logo_description">Ingrify App Logo</string>
    <string name="app_name_ingrify">INGRIFY</string>
    <string name="slogan_ingredients_identified_for_you">Ingredients Identified For You</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_skip">Skip...</string>
    <string name="signup_title">SIGN UP</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_username">Username</string>
    <string name="hint_create_password">Create New Password</string>
    <string name="hint_confirm_password">Confirm New Password</string>
    <string name="button_signup_submit">Sign Up</string>
    <string name="text_already_have_account">Already have account?</string>
    <string name="text_login_link">Login</string>
    <string name="back_button_description">Back button</string>


    <string name="login_title">LOGIN</string>
    <string name="hint_password">Password</string>
    <string name="button_login_submit">Login</string>

    <string name="welcome_message">Hello, User!!</string>
    <string name="scan_card_title">Scan</string>
    <string name="search_card_title">Search</string>
    <string name="allergen_card_title">Allergen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
